--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/DajanaStiberova/4clojure-solutions">View on GitHub</a>
 
-          <h1 id="project_title">4clojure-solutions</h1>
+          <i><h1 id="project_title">Wanna be Clojure girl ..</h1></i>
           <h2 id="project_tagline"></h2>
 
             <section id="downloads">
