--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
     <section class="page-header">
       <h1 class="project-name">The Wanna be Clojure Girl ..</h1>
       <h2 class="project-tagline"></h2>
-      <a href="https://github.com/DajanaStiberova/4clojure-solutions" class="btn">View on GitHub</a>
-      <a href="https://github.com/DajanaStiberova/4clojure-solutions/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/DajanaStiberova/4clojure-solutions/tarball/master" class="btn">Download .tar.gz</a>
+      <a href="https://clojuregirl.wordpress.com/" class="btn">clojuregirl.wordpress.com/</a>
     </section>
 
     <section class="main-content">
