--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section class="page-header">
       <h1 class="project-name">The Wanna be Clojure Girl ..</h1>
       <h2 class="project-tagline"></h2>
-      <a href="https://clojuregirl.wordpress.com/" class="btn">clojuregirl.wordpress.com</a>
+      <a href="https://clojuregirl.wordpress.com/" class="btn">blog.clojuregirl.com</a>
     </section>
 
     <section class="main-content">
